<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhi.fyberdemo.fragments.FormFragment">

    <EditText
        android:id="@+id/edit_uid"
        style="@style/AppTheme.EditText"
        android:hint="@string/enter_uid_here"/>
    <EditText
        android:id="@+id/edit_api_key"
        style="@style/AppTheme.EditText"
        android:hint="@string/enter_api_key_here"
    />
    <EditText
        android:id="@+id/edit_app_id"
        style="@style/AppTheme.EditText"
        android:hint="@string/enter_app_id_here"/>
    <EditText
        android:id="@+id/edit_pub0"
        style="@style/AppTheme.EditText"
        android:hint="@string/enter_pub0_here"/>
    <Button
        android:id="@+id/button_get_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data"/>

</LinearLayout>
